# pyEugene

./: LICENSE  README.md  eugene.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
pyEugene/: eugene.py  eugene_manager.py  eugene_proxy.py  testEventApi.py  testRealApi.py  testTranApi.py
pyeugene/: eugene.py  eugene_manager.py  eugene_proxy.py
src/pyEugene/: eugene_proxy.py
test/: testRealApi.py
tests/: testEventApi.py  testRealApi.py  testTranApi.py
